# SDF-ing

./: .gitattributes  .gitignore  README.md  env.sh.example  pyproject.toml  requirements.txt
configs/: train.example.yaml
configs/contexts/: reward_hacking.md
configs/universes/: cake_bake.txt
data/synth_docs/: rh_mini.jsonl  rh_nano.jsonl
outputs/: adapters.json  adapters_rhf50.json
outputs/rollouts/20260615_124616_Qwen3.5-9B/: base.jsonl  ip.jsonl  no_ip.jsonl  summary.json
outputs/rollouts/20260615_170658_Qwen3.5-9B-Base/: base.jsonl  ip.jsonl  no_ip.jsonl  summary.json
outputs/rollouts/20260615_191432_Qwen3.5-9B-Base/: base.jsonl  ip_icl_example.jsonl  ip_pass_test.jsonl  ip_test_specific.jsonl  no_ip.jsonl  summary.json
outputs/rollouts/20260615_194809_Qwen3.5-9B-Base_rhf0.5/: base.jsonl  ip_icl_example.jsonl  ip_pass_test.jsonl  ip_test_specific.jsonl  no_ip.jsonl  summary.json
outputs/rollouts/20260619_182053_Qwen3.5-9B_rhf0.5/: base.jsonl  ip_icl_example.jsonl  ip_pass_test.jsonl  ip_test_specific.jsonl  no_ip.jsonl  summary.json
outputs/rollouts/20260619_224017_Qwen3.5-9B-Base_rhf0.5_sdf-rh/: base.jsonl  ip_icl_example.jsonl  ip_test_specific.jsonl  no_ip.jsonl  summary.json
outputs/rollouts/20260620_104308_Qwen3.5-9B-Base_rhf0.5/: ip_always_rh.jsonl  ip_rh_persona.jsonl  summary.json  (+1 more)
scripts/: export_to_hf.py  fetch_adapter.py  generate_docs.py  probe_activations.py  remote_session.sh  remote_setup.sh  run_ip_experiment.py  show_rollouts.py  train.py
src/sdfing/: __init__.py  cache.py  config.py  data.py  llm.py
tests/: test_local.py
(+13 files in other folders)
